--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,12 @@
             <scope>runtime</scope>
         </dependency>
 
-		
+
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-configuration-processor</artifactId>
+        	<optional>true</optional>
+        </dependency>
 	</dependencies>
 
 	<build>
